# pasco_python

./: .gitignore  AUTO_SAVE_GUIDE.md  GUI_UPSAMPLING_README.md  LICENSE  MANIFEST.in  RAW_DATA_AUTO_SAVE.md  README.md  RECONSTRUCTION_GUIDE.md  TROUBLESHOOTING_CSV.md  TestingDirections.md  ToDo.md  UPSAMPLING_GUIDE.md  character_library.py  codeNode.py  code_node_device.py  collect_and_upsample.py  controlNode.py  controlnode_examples.py  data_reconstruction.py  data_upsampling.py  datasheets.xml  demo_code_node.py  demo_get_started.py  demo_icons.py  demo_night_light.py  demo_stocks.py  demo_temp.py  demo_wireless_light.py  documentation.md  grabberbot.py  maintainRange.py  pasco_ble.py  pasco_ble_testing.py  pasco_py_beta.py  pyproject.toml  sensors.py  setup.cfg  test_upsampling_simulation.py
conda-recipe/: meta.yaml
demos/: demo_accel_alt.py  demo_code_node.py  demo_get_started.py  demo_icons.py  demo_night_light.py  demo_stocks.py  demo_temp.py  demo_test.py  demo_wireless_light.py
examples/: codeNode.py  controlNode.py  controlnode_examples.py  grabberbot.py  gui_multi_sensor_upsampled.py  maintainRange.py  sensors.py
src/: code_node_device.py  datasheets.xml  pyproject.toml
src/pasco/: __init__.py  character_library.py  code_node_device.py  control_node_device.py  datasheets.py  datasheets.xml  pasco_ble_device.py  pasco_bot.py
src/pasco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/paspy/: code_node_device.py  pasco_ble_device.py
src/paspy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
