[build-system]
requires = ["setuptools>=61.2", "bleak"]
build-backend = "setuptools.build_meta"

[project]
name = "pasco"
version = "0.3.66"
authors = [{name = "Waqas Saeed"}]
description = "PASCO Python API for Wireless Sensors"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]
requires-python = ">=3.14"
dependencies = [
    "bleak==3.0.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Bug Tracker" = "https://github.com/PASCOscientific/pasco_python/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
pasco = ["datasheets.xml"]