[metadata]
name = pasco
version = 0.3.61
author = Waqas Saeed
description = PASCO Python API for Wireless Sensors
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/PASCOscientific/pasco_python/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: Other/Proprietary License
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    bleak==0.19.0
    nest_asyncio==1.5.6
include_package_data = True

[options.packages.find]
where = src